src/objects/Building__c.object
<CustomObject>
    <description>This object is used to store all the buildings from Yardi into Salesforce. Buildings are linked to plots, and Units are linked to buildings.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Code__c</fullName>
        <externalId>true</externalId>
        <label>Building Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Building_Height_ft__c</fullName>
        <label>Building Height (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Image__c</fullName>
        <label>Building Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Building_Levels_Above_Ground__c</fullName>
        <label>Building Levels Above Ground</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Levels_Mezzanine__c</fullName>
        <label>Building Levels Mezzanine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Levels_Underground__c</fullName>
        <label>Building Levels Underground</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Name_Arabic__c</fullName>
        <label>Building Name Arabic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name_English__c</fullName>
        <label>Building Name English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Owner_Name__c</fullName>
        <label>Building Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Park__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Park</label>
        <referenceTo>Business_Park__c</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Name__c</fullName>
        <label>Commercial Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_KW__c</fullName>
        <label>Connected KW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connected_TR__c</fullName>
        <label>Connected TR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connected_water_capacity_IGl__c</fullName>
        <label>Connected water capacity (IGl)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Name__c</fullName>
        <label>Detailed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Status__c</fullName>
        <label>Development Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developed</fullName>
                </value>
                <value>
                    <fullName>Under Development</fullName>
                </value>
                <value>
                    <fullName>Undeveloped</fullName>
                </value>
                <value>
                    <fullName>Construction on hold</fullName>
                </value>
                <value>
                    <fullName>Construction Resumed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <isActive>false</isActive>
                    <label>Active</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ejari_Owner_Number__c</fullName>
        <label>Ejari Owner Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEED_Certification__c</fullName>
        <label>LEED Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Type__c</fullName>
        <label>Ownership Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TECOM Owned</fullName>
                </value>
                <value>
                    <fullName>PMLA</fullName>
                </value>
                <value>
                    <fullName>DED - PMS</fullName>
                </value>
                <value>
                    <fullName>TECOM - PMS</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMLA_Agreement_Date__c</fullName>
        <label>PMLA Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMLA_Lease_Share__c</fullName>
        <label>PMLA Lease Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMLA_Service_Share__c</fullName>
        <label>PMLA Service Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMLA_Share_Unit__c</fullName>
        <description>Used in calculation of PMLA share. It states if the calculation is by percent or sq ft</description>
        <label>PMLA Share Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plot</label>
        <referenceTo>Plot__c</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Code_YARDI__c</fullName>
        <externalId>true</externalId>
        <label>Property Code-YARDI</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Property_Name_English__c</fullName>
        <label>Property Name English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <label>Property Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Values TBC</fullName>
                    <isActive>false</isActive>
                    <label>Values TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Confirm values</fullName>
                    <isActive>false</isActive>
                    <label>Confirm values</label>
                </value>
                <value>
                    <fullName>DED - PMS</fullName>
                    <isActive>false</isActive>
                    <label>DED - PMS</label>
                </value>
                <value>
                    <fullName>PMLA</fullName>
                    <isActive>false</isActive>
                    <label>PMLA</label>
                </value>
                <value>
                    <fullName>TECOM - PMS</fullName>
                    <isActive>false</isActive>
                    <label>TECOM - PMS</label>
                </value>
                <value>
                    <fullName>TECOM Owned</fullName>
                    <isActive>false</isActive>
                    <label>TECOM Owned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sector</label>
        <referenceTo>Sector__c</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Basement_Area__c</fullName>
        <label>Total Basement Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Common_Area_ft2__c</fullName>
        <label>Total Common Area (ft2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Leasable_Area_ft2__c</fullName>
        <label>Total Leasable Area (ft2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Services_Area_ft2__c</fullName>
        <label>Total Services Area (ft2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Building</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>